--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@
   --productCardText: #000000;
   --productCardSalesText: #78788C;
   --productCardDiscount: #DF0000;
-  --productCardPriceNoDiscount: #78788C;
+  --productCardPrice: #29293E;
 }
 
