--- a/src/Components/Product/productCard.scss
+++ b/src/Components/Product/productCard.scss
@@ -61,7 +61,7 @@
     width: 18px;
     height: 18px;
     background-repeat: no-repeat;
-    background-image: url(/src/img/ratingStar.svg);
+    background-image: url(../../img/ratingStar.svg);
 }
 
 .productCard__sold {
@@ -87,7 +87,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url(/src/img/like.svg);
+    background-image: url(../../img/like.svg);
     background-position: center;
     background-repeat: no-repeat;
     border: none;
