added a button logic, need to correct BEM/Styles

--- a/src/Components/Product/productCard.scss
+++ b/src/Components/Product/productCard.scss
@@ -93,4 +93,9 @@
     border: none;
     right: 15px;
     top: 15px;
+    cursor: pointer;
+}
+
+.productCard__button--liked {
+    background-image: url(../../img/liked.svg);
 }
