added styles to categories

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,6 @@
   --productCardSalesText: #78788C;
   --productCardDiscount: #DF0000;
   --productCardPrice: #29293E;
+  --sectionLabel: #ffffff;
 }
 
