partly added syles to single cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   --productCardPrice: #29293E;
   --sectionLabel: #ffffff;
   --singleCardText: #29293E;
+  --productCardDetails: #F6B24C;
 }
 
 .app__links {
