added more styling to single card

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 :root {
-  --productCardText: #000000;
+  --pureBlack: #000000;
   --productCardSalesText: #78788C;
   --productCardDiscount: #DF0000;
   --productCardPrice: #29293E;
-  --sectionLabel: #ffffff;
+  --pureWhite: #ffffff;
   --singleCardText: #29293E;
   --productCardDetails: #F6B24C;
 }
