--- a/src/Components/Categories/categories.scss
+++ b/src/Components/Categories/categories.scss
@@ -24,7 +24,7 @@
     font-weight: 800;
     font-size: 40px;
     line-height: 54px;
-    color: var(--sectionLabel);
+    color: var(--pureWhite);
     background-repeat: no-repeat;
 }
 
@@ -65,7 +65,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
-    color: var(--sectionLabel);
+    color: var(--pureWhite);
     text-decoration: none;
 }
 
