--- a/src/Components/Product/product.scss
+++ b/src/Components/Product/product.scss
@@ -3,8 +3,8 @@
     margin-left: 20px;
     margin-bottom: 20px;
     max-width: 400px;
-    max-height: 458px;
-    color: var(--productCardText);
+    max-height: 460px;
+    color: var(--pureBlack);
     font-size: 25px;
     display: flex;
     flex-direction: column;
@@ -121,14 +121,15 @@
 }
 
 .single-card__main {
-    width: 100%;
+    min-width: 500px;
     padding: 0;
     margin: 0;
     list-style: none;
-    border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
     background-size: cover;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .single-card__img-preview-main {
@@ -177,20 +178,25 @@
     font-weight: 700;
     font-size: 40px;
     line-height: 54px;
+    max-height: 54px;
+    margin-bottom: 25px;
 }
 
 .single-card__description {
+    max-height: 96px;
     font-weight: 400;
     font-size: 20px;
     line-height: 32px;
     color: var(--productCardSalesText);
     width: 100%;
+    margin-bottom: 25px;
 }
 
 .single-card__rating {
     width: 100%;
     font-size: 16px;
     color: var(--productCardSalesText);
+    margin-bottom: 15px;
 }
 
 .single-card__sold {
@@ -200,10 +206,28 @@
 
 .single-card__price {
     width: 100%;
-    font-weight: bold;
-    font-size: 25px;
+    font-weight: 800;
+    font-size: 45px;
+    line-height: 61px;
     padding-right: 10px;
     color: var(--productCardPrice);
+    padding-right: 0;
+    margin-bottom: 15px;
+}
+
+.single-card__label {
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 34px;
+    padding-bottom: 25px;
+}
+
+.single-card__quantity {
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 34px;
+    margin-top: 0;
+    margin-bottom: 25px;
 }
 
 .single-card__counter {
@@ -212,22 +236,63 @@
 
 .single-card__input {
     max-width: 50px;
+    margin-bottom: 40px;
 }
 
 .single-card__btn-add-to-buy {
-    max-width: 219px;
-    background-color: var(--productCardText);
-    color: var(--sectionLabel);
+    width: 219px;
+    height: 60px;
+    background-color: var(--pureBlack);
+    color: var(--pureWhite);
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
+    margin-right: 20px;
+    border: none;
+    border-radius: 10px;
+    padding-left: 20px;
+    position: relative;
+    cursor: pointer;
+}
+
+.single-card__btn-add-to-buy::before {
+    position: absolute;
+    content: '';
+    width: 24px;
+    height: 24px;
+    background-image: url('./img/cart.svg');
+    transform: translate(-40px, 0);
 }
 
 .single-card__btn-add-to-wish {
+    position: relative;
+    width: 254px;
+    height: 60px;
     color: var(--singleCardText);
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
+    margin: 0;
+    padding: 0;
+    max-width: 254px;
+    border: 1px solid var(--pureBlack);
+    border-radius: 10px;
+    background-color: var(--pureWhite);
+    padding-left: 20px;
+    cursor: pointer;
+}
+
+.single-card__btn-add-to-wish::before {
+    position: absolute;
+    content: '';
+    width: 24px;
+    height: 24px;
+    background-image: url('./img/wish.svg');
+    transform: translate(-40px, 0);
+}
+
+.single-card__interactions {
+    width: 100%;
 }
 
 .single-card__btn-close {
@@ -242,7 +307,7 @@
     font-size: 20px;
     line-height: 27px;
     text-decoration: none;
-    color: var(--productCardText);
+    color: var(--pureBlack);
 }
 
 .productPage {
