--- a/src/Components/Categories/categories.scss
+++ b/src/Components/Categories/categories.scss
@@ -8,10 +8,10 @@
     display: flex;
     list-style: none;
     flex-wrap: wrap;
-    flex-direction: row;
     width: 100%;
     padding: 0;
     margin: 0;
+    justify-content: center;
 }
 
 .categories__Section {
@@ -26,6 +26,8 @@
     line-height: 54px;
     color: var(--pureWhite);
     background-repeat: no-repeat;
+    margin-right: 20px;
+    margin-bottom: 50px;
 }
 
 .categories__Section-name {
