--- a/src/Components/Product/product.scss
+++ b/src/Components/Product/product.scss
@@ -384,3 +384,12 @@
     margin-left: 100px;
     margin-right: 100px;
 }
+
+.shoppingList__priceCalculation {
+    margin-top: 40px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 25px;
+    color: var(--productCardDiscount);
+}
