'styled-single-card'

--- a/src/Components/Categories/categories.scss
+++ b/src/Components/Categories/categories.scss
@@ -2,6 +2,10 @@
     width: 100%;
     margin: 0;
     padding: 0;
+
+    @media (min-width: 1440px) {
+        width: 1440px;
+    }
 }
 
 .categories__List {
@@ -77,8 +81,6 @@
     content: '';
     width: 120px;
     height: 120px;
-    background: url('./img/arrow.svg');
-    background-repeat: no-repeat;
-    background-position: center;
+    background: url('./img/arrow.svg') no-repeat center;
     transform: translate(90px, 380px);
 }
