--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,13 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.App {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .app__links {
   display: flex;
   width: 100%;
