--- a/src/Components/Categories/ItemTypes/categoryPage.scss
+++ b/src/Components/Categories/ItemTypes/categoryPage.scss
@@ -2,5 +2,31 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-start;
+
+    @media (min-width: 1440px) {
+        width: 1440px;
+    }
+}
+
+.categoryPage__header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.categoryPage__name {
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 55px;
+    margin-bottom: 50px;
+    margin-top: 0;
+}
+
+.categoryPage__seeProducts {
+    margin-top: 25px;
+    font-size: 20px;
+    font-weight: 600;
 }
