--- a/src/Components/ShoppingCart/shoppingCart.scss
+++ b/src/Components/ShoppingCart/shoppingCart.scss
@@ -124,3 +124,12 @@
     padding-right: 10px;
     color: var(--productCardPrice);
 }
+
+.shopping-list__price-calculation {
+    margin-top: 40px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 25px;
+    color: var(--productCardDiscount);
+}
