--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   --productCardPrice: #29293E;
   --pureWhite: #ffffff;
   --singleCardText: #29293E;
-  --productCardDetails: #F6B24C;
+  --productCardDetails: #777888;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
