--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,3 +1,5 @@
+@import "src/App";
+
 .footer {
   width: 100%;
   height: 100%;
@@ -5,17 +7,31 @@
 }
 
 .footer-main {
+  @media (min-width: $largeDesktopDevice) {
+    max-width: $largeDesktopDevice;
+    margin: 0 auto;
+  }
+
   display: grid;
-  grid-template: 300px / 1.33fr 3fr 1fr;
-  margin-left: 75px;
-  margin-right: 113px;
-  padding-top: 50px;
+  grid-gap: 20px;
+  padding: 50px 20px 20px 20px;
+
+  @media (min-width: $tabletDevice) {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  @media (min-width: $desktopDevice) {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
 }
 
 .footer-content {
   display: grid;
-  grid-template:  50px 50px 50px / 1.75fr 1fr 1.25fr;
-  margin-right: 153px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+
+  @media (min-width: $tabletDevice) {
+  }
 }
 
 .footer-content__community-item,
@@ -46,7 +62,6 @@
   font-size: 18px;
   line-height: 25px;
   color: #ffffff;
-  min-height: 250px;
 }
 
 .footer-content__support,
@@ -63,17 +78,12 @@
 }
 
 .footer-content__community {
-  min-width: 109px;
-  margin-right: 85px;
 }
 
 .footer-content__about {
-  min-width: 85px;
-  margin-right: 90px;
 }
 
 .footer-content__support {
-  min-width:  140px;
 }
 
 .footer-underline {
@@ -102,10 +112,6 @@
 }
 
 .footer-shop {
-  min-width: 313px;
-  display: grid;
-  grid-template: 48px 100px / 313px;
-  margin-right: 123px;
 }
 
 .footer-shop__title {
