--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -21,16 +21,22 @@
   }
 
   @media (min-width: $desktopDevice) {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
   }
 }
 
 .footer-content {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
 
   @media (min-width: $tabletDevice) {
+    max-width: $tabletDevice;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (min-width: $desktopDevice) {
+    max-width: $desktopDevice;
   }
 }
 
@@ -49,7 +55,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
-  color: #ffffff;
+  color: var(--pureWhite);
 }
 
 .footer-content__community,
@@ -61,7 +67,7 @@
   font-weight: 800;
   font-size: 18px;
   line-height: 25px;
-  color: #ffffff;
+  color: var(--pureWhite);
 }
 
 .footer-content__support,
@@ -77,26 +83,34 @@
   margin-top: 30px;
 }
 
-.footer-content__community {
-}
-
-.footer-content__about {
-}
-
-.footer-content__support {
-}
-
 .footer-underline {
-  margin-left: 75px;
-  margin-right: 72px;
-  width: 100%;
+  display: grid;
+
+  @media(min-width: $desktopDevice) {
+    padding: 10px 20px 20px 20px;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    max-width: $largeDesktopDevice;
+    margin: 0 auto;
+  }
 }
 
 .footer-underline__list {
   display: grid;
-  grid-template: 50px / 4fr 1fr 1fr 1fr 0.5fr;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
   margin: 0;
-  padding: 0;
+  padding: 20px;
+
+  @media (min-width: $tabletDevice) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (min-width: $desktopDevice) {
+    width: 100%;
+    padding: 0;
+  }
 }
 
 .footer-underline__item {
@@ -104,14 +118,12 @@
 }
 
 .footer-underline__item:nth-child(1) {
-  text-align: left;
-}
-
-.footer-underline__item:last-child {
-  text-align: right;
-}
-
-.footer-shop {
+    grid-row: 3;
+    grid-column: 1 / span 2;
+  @media (min-width: $tabletDevice) {
+    grid-row: 2;
+    grid-column: 1 / span 4;
+  }
 }
 
 .footer-shop__title {
@@ -136,7 +148,8 @@
 }
 
 .footer-contacts {
-  min-width: 154px;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-contacts__mail {
