--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -3,15 +3,10 @@
 .footer {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: var(--pureBlack);
 }
 
 .footer-main {
-  @media (min-width: $largeDesktopDevice) {
-    max-width: $largeDesktopDevice;
-    margin: 0 auto;
-  }
-
   display: grid;
   grid-gap: 20px;
   padding: 50px 20px 20px 20px;
@@ -22,6 +17,11 @@
 
   @media (min-width: $desktopDevice) {
     grid-template-columns: 1fr 2fr;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    max-width: $largeDesktopDevice;
+    margin: 0 auto;
   }
 }
 
@@ -108,7 +108,7 @@
   }
 
   @media (min-width: $desktopDevice) {
-    width: 100%;
+    grid-template-columns: 5fr repeat(3, 1fr) 0.5fr;
     padding: 0;
   }
 }
@@ -123,6 +123,10 @@
   @media (min-width: $tabletDevice) {
     grid-row: 2;
     grid-column: 1 / span 4;
+  }
+  @media (min-width: $desktopDevice) {
+    grid-row: auto;
+    grid-column: auto;
   }
 }
 
