--- a/src/Components/Product/product.scss
+++ b/src/Components/Product/product.scss
@@ -1,411 +1,409 @@
 @import 'src/App';
 
 .productCard__preview-wrapper {
-    color: var(--pureBlack);
-    font-size: 25px;
-    display: grid;
-    background-size: cover;
-    max-width: 100%;
-    margin: 0 auto;
-    @media (min-width: $mobileDevice) {
-        margin: 0;
-    }
+  color: var(--pureBlack);
+  font-size: 25px;
+  display: grid;
+  background-size: cover;
+  max-width: 100%;
+  margin: 0 auto;
+  @media (min-width: $mobileDevice) {
+    margin: 0;
+  }
 }
 
 .productCard__PreviewUrl {
-    display: block;
-    position: relative;
-    max-height: 100%;
-    max-width: 100%;
+  display: block;
+  position: relative;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .productCard__price {
-    color: var(--productCardSalesText);
-    text-decoration: line-through;
-    padding-right: 5.5px;
+  color: var(--productCardSalesText);
+  text-decoration: line-through;
+  padding-right: 5.5px;
 }
 
 .productCard__totalPrice {
-    font-weight: bold;
-    font-size: 25px;
-    padding-right: 10px;
-    color: var(--productCardPrice);
+  font-weight: bold;
+  font-size: 25px;
+  padding-right: 10px;
+  color: var(--productCardPrice);
 }
 
 .productCard__discount {
-    font-size: 25px;
-    color: var(--productCardDiscount);
+  font-size: 25px;
+  color: var(--productCardDiscount);
 }
 
 .productCard__rating {
-    padding-top: 10px;
-    font-size: 16px;
-    color: var(--productCardSalesText);
+  padding-top: 10px;
+  font-size: 16px;
+  color: var(--productCardSalesText);
 }
 
 .productCard__group {
-    margin: 0;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 10px;
-    display: flex;
-    line-height: 34px;
-    list-style: none;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 10px;
+  display: flex;
+  line-height: 34px;
+  list-style: none;
 }
 
 .productCard__star {
-    width: 18px;
-    height: 18px;
-    background-repeat: no-repeat;
-    background-image: url(./img/ratingStar.svg);
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  background-image: url(./img/ratingStar.svg);
 }
 
 .productCard__sold {
-    padding-left: 10px;
-    max-height: 18px;
+  padding-left: 10px;
+  max-height: 18px;
 }
 
 .productCard__preview {
-    background-size: cover;
-    min-height: 100%;
-    max-width: 100%;
+  background-size: cover;
+  min-height: 100%;
+  max-width: 100%;
 }
 
 .productCard__title {
-    font-size: 23px;
-    font-weight: 700;
-    line-height: 31px;
-    padding-top: 14.5px;
+  font-size: 23px;
+  font-weight: 700;
+  line-height: 31px;
+  padding-top: 14.5px;
 }
 
 .productCard__button {
-    display: block;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-image: url(../../img/like.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    border: none;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+  display: block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-image: url(../../img/like.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .productCard__button_liked {
-    background-image: url(../../img/liked.svg);
+  background-image: url(../../img/liked.svg);
 }
 
 .productCard__details {
-    max-height: 30px;
-    font-size: 23px;
-    font-weight: 700;
-    line-height: 31px;
-    margin: 10px 15% 0px 15%;
-    border: none;
-    cursor: pointer;
-    background-color: var(--productCardDetails);
+  max-height: 30px;
+  font-size: 23px;
+  font-weight: 700;
+  line-height: 31px;
+  margin: 10px 15% 0px 15%;
+  border: none;
+  cursor: pointer;
+  background-color: var(--productCardDetails);
 }
 
 .productCard__link {
-    text-decoration: none;
-    color: var(--productCardPrice);
+  text-decoration: none;
+  color: var(--productCardPrice);
 }
 
 // ***********
 
-.single-card {
-    display: flex;
-    width: 1440px;
-    flex-wrap: wrap;
-    min-height: 700px;
-}
-
 .single-card__details {
-    display: flex;
+  margin: 0 auto;
+
+  @media (min-width: $desktopDevice) {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .single-card__header {
-    width: 100%;
-    display: flex;
-    font-size: 40px;
-    font-weight: 800;
-    margin-bottom: 50px;
-    line-height: 55px;
-    max-height: 55px;
+  width: 100%;
+  grid-row: 1 / span 3;
+  font-size: 40px;
+  font-weight: 800;
+  line-height: 55px;
+  max-height: 55px;
 }
 
 .single-card__main {
-    min-width: 500px;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    background-size: cover;
-    flex-direction: column;
-    justify-content: flex-start;
-}
+  padding: 0;
+  margin: 0;
+  list-style: none;
 
-.single-card__img-preview-main {
-    width: 505px;
-    height: 505px;
+  @media (min-width: $desktopDevice) {
+    grid-row: 1;
+    grid-column: 2;
+  }
 }
 
 .single-card__photos {
-    display: flex;
-    list-style: none;
-    max-width: 505px;
-    max-height: 640px;
-    flex-wrap: wrap;
-    padding-left: 0;
-    margin-right: 50px;
-    margin-bottom: 0;
-    margin-top: 0;
+  background-size: cover;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns:  repeat(4, 1fr);
+  grid-template-rows: 3fr 1fr;
+  grid-gap: 15px;
+  max-width: 100%;
+  max-height: 100%;
+  @media (min-width: $desktopDevice) {
+    grid-row: 1;
+    grid-column: 1;
+  }
 }
 
 .single-card__img:first-child {
-    width: 505px;
-    height: 505px;
-    margin-bottom: 25px;
-    margin-right: 0;
+  margin: 0 auto;
+  grid-row: span 1;
+  grid-column: span 4;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .single-card__img:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .single-card__img {
-    width: 107px;
-    height: 107px;
-    margin-right: 25px;
+  grid-row: 2;
 }
 
 .single-card__img-preview {
-    width: 107px;
-    height: 107px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-
 .single-card__title {
-    width: 100%;
-    color: var(--singleCardText);
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 54px;
-    max-height: 54px;
-    margin-bottom: 25px;
+  width: 100%;
+  color: var(--singleCardText);
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 54px;
+  max-height: 54px;
+  margin-bottom: 25px;
 }
 
 .single-card__description {
-    max-height: 96px;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 32px;
-    color: var(--productCardSalesText);
-    width: 100%;
-    margin-bottom: 25px;
+  max-height: 96px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  color: var(--productCardSalesText);
+  width: 100%;
+  margin-bottom: 25px;
 }
 
 .single-card__rating {
-    width: 100%;
-    font-size: 16px;
-    color: var(--productCardSalesText);
-    margin-bottom: 15px;
+  width: 100%;
+  font-size: 16px;
+  color: var(--productCardSalesText);
+  margin-bottom: 15px;
 }
 
 .single-card__sold {
-    padding-left: 10px;
-    max-height: 18px;
+  padding-left: 10px;
+  max-height: 18px;
 }
 
 .single-card__price {
-    width: 100%;
-    font-weight: 800;
-    font-size: 45px;
-    line-height: 61px;
-    padding-right: 10px;
-    color: var(--productCardPrice);
-    padding-right: 0;
-    margin-bottom: 15px;
+  width: 100%;
+  font-weight: 800;
+  font-size: 45px;
+  line-height: 61px;
+  padding-right: 10px;
+  color: var(--productCardPrice);
+  margin-bottom: 15px;
 }
 
 .single-card__colors {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .single-card__label {
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 34px;
-    margin-bottom: 25px;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 34px;
+  margin-bottom: 25px;
 }
 
 .single-card__select {
-    width: 197px;
-    height: 60px;
-    border: 1px solid var(--pureBlack);
-    border-radius: 10px;
-    font-size: 25px;
-    cursor: pointer;
+  width: 197px;
+  height: 60px;
+  border: 1px solid var(--pureBlack);
+  border-radius: 10px;
+  font-size: 25px;
+  cursor: pointer;
 }
 
 .single-card__option {
-    text-align: center;
-    margin-left: 20px;
+  text-align: center;
+  margin-left: 20px;
 }
 
 .single-card__quantity {
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 34px;
-    margin-top: 0;
-    margin-bottom: 25px;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 34px;
+  margin-top: 0;
+  margin-bottom: 25px;
 }
 
 .single-card__counter {
-    width: 100%;
+  width: 100%;
 }
 
 .single-card__input {
-    max-width: 25px;
-    margin-bottom: 40px;
-    text-align: center;
-    border: none;
-    font-size: 25px;
+  max-width: 25px;
+  margin-bottom: 40px;
+  text-align: center;
+  border: none;
+  font-size: 25px;
 }
 
 .single-card__controls {
-    width: 74px;
-    height: 36px;
+  width: 74px;
+  height: 36px;
 }
 
 .single-card__btn-plus,
 .single-card__btn-minus {
-    border: none;
-    background-color: var(--pureWhite);
-    position: relative;
-    width: 15px;
-    height: 34px;
+  border: none;
+  background-color: var(--pureWhite);
+  position: relative;
+  width: 15px;
+  height: 34px;
 }
 
 .single-card__btn-minus {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .single-card__btn-minus::after {
-    width: 15px;
-    height: 34px;
-    content: '';
-    position: absolute;
-    background-image: url('./img/minus.svg');
-    background-repeat: no-repeat;
-    transform: translate(0, -10px);
-    cursor: pointer;
+  width: 15px;
+  height: 34px;
+  content: '';
+  position: absolute;
+  background-image: url('./img/minus.svg');
+  background-repeat: no-repeat;
+  transform: translate(0, -10px);
+  cursor: pointer;
 }
 
 .single-card__btn-plus::after {
-    width: 15px;
-    height: 34px;
-    content: '';
-    position: absolute;
-    background-image: url('./img/plus.svg');
-    background-repeat: no-repeat;
-    transform: translate(0, -15px);
-    cursor: pointer;
+  width: 15px;
+  height: 34px;
+  content: '';
+  position: absolute;
+  background-image: url('./img/plus.svg');
+  background-repeat: no-repeat;
+  transform: translate(0, -15px);
+  cursor: pointer;
 }
 
 .single-card__btn-add-to-buy {
-    width: 219px;
-    height: 60px;
-    background-color: var(--pureBlack);
-    color: var(--pureWhite);
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 27px;
-    margin-right: 20px;
-    border: none;
-    border-radius: 10px;
-    padding-left: 20px;
-    position: relative;
-    cursor: pointer;
+  width: 219px;
+  height: 60px;
+  background-color: var(--pureBlack);
+  color: var(--pureWhite);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  margin-right: 20px;
+  border: none;
+  border-radius: 10px;
+  padding-left: 20px;
+  position: relative;
+  cursor: pointer;
 }
 
 .single-card__btn-add-to-buy::before {
-    position: absolute;
-    content: '';
-    width: 24px;
-    height: 24px;
-    background-image: url('./img/cart.svg');
-    transform: translate(-40px, 0);
+  position: absolute;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-image: url('./img/cart.svg');
+  transform: translate(-40px, 0);
 }
 
 .single-card__btn-add-to-wish {
-    position: relative;
-    width: 254px;
-    height: 60px;
-    color: var(--singleCardText);
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 27px;
-    margin: 0;
-    padding: 0;
-    max-width: 254px;
-    border: 1px solid var(--pureBlack);
-    border-radius: 10px;
-    background-color: var(--pureWhite);
-    padding-left: 20px;
-    cursor: pointer;
+  position: relative;
+  width: 254px;
+  height: 60px;
+  color: var(--singleCardText);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  margin: 0;
+  padding: 0;
+  max-width: 254px;
+  border: 1px solid var(--pureBlack);
+  border-radius: 10px;
+  background-color: var(--pureWhite);
+  padding-left: 20px;
+  cursor: pointer;
 }
 
 .single-card__btn-add-to-wish::before {
-    position: absolute;
-    content: '';
-    width: 24px;
-    height: 24px;
-    background-image: url('./img/wish.svg');
-    transform: translate(-40px, 0);
+  position: absolute;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-image: url('./img/wish.svg');
+  transform: translate(-40px, 0);
 }
 
 .single-card__interactions {
-    width: 100%;
+  width: 100%;
 }
 
 .single-card__btn-close {
-    padding: 0;
-    cursor: pointer;
-    width: 100%;
-    margin-top: 15px;
-    height: 35px;
-    background-color: var(--productCardDetails);
-    bottom: 0;
+  padding: 0;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 15px;
+  height: 35px;
+  background-color: var(--productCardDetails);
+  bottom: 0;
 }
 
 .single-card__link-close {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 27px;
-    text-decoration: none;
-    color: var(--pureBlack);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  text-decoration: none;
+  color: var(--pureBlack);
 }
 
 .product-page {
-    display: flex;
-    min-height: 700px;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
+  margin: 0 auto;
+  padding: 0 20px;
+  @media (min-width: $mobileDevice) {
+    max-width: $mobileDevice;
+  }
 
-    @media (min-width: 1200px) {
-        width: 1200px;
-    }
+  @media (min-width: $tabletDevice) {
+    max-width: $tabletDevice;
+  }
 
-    @media (min-width: 1440px) {
-        width: 1440px;
-    }
+  @media (min-width: $desktopDevice) {
+    max-width: $desktopDevice;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    max-width: $largeDesktopDevice;
+  }
 }
