--- a/src/Components/Product/product.scss
+++ b/src/Components/Product/product.scss
@@ -148,14 +148,14 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  display: grid;
+  //display: grid;
 
-  @media (min-width: $desktopDevice) {
-    grid-row: 1;
-    grid-column: 2;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 0.8fr;
-  }
+  //@media (min-width: $desktopDevice) {
+  //  grid-row: 1;
+  //  grid-column: 2;
+  //  grid-template-columns: 1fr;
+  //  grid-template-rows: 0.4fr 0.3fr;
+  //}
 }
 
 .single-card__photos {
@@ -165,7 +165,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns:  repeat(4, 1fr);
-  grid-template-rows: 3fr 1fr;
+  //grid-template-rows: 1fr 1fr;
   grid-gap: 15px;
   max-width: 100%;
   max-height: 100%;
@@ -385,13 +385,14 @@
   padding: 0;
   cursor: pointer;
   margin-top: 15px;
-  min-height: 60px;
+  min-height: 40px;
   background-color: var(--productCardDetails);
   border-radius: 10px;
   color: var(--pureBlack);
   font-size: 20px;
   font-weight: 600;
   border: none;
+  width: 100%;
 }
 
 .single-card__link-close {
