--- a/src/Components/ShoppingCart/shoppingCart.scss
+++ b/src/Components/ShoppingCart/shoppingCart.scss
@@ -1,37 +1,43 @@
+@import "src/App";
+
 .shopping-card {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-right: 200px;
-    padding-left: 200px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
+
+    @media (min-width: $largeDesktopDevice) {
+        max-width: $largeDesktopDevice;
+        margin:  0 100px 0 100px;
+    }
 }
 
 .shopping-card__img {
-    width: 107px;
-    height: 107px;
-    margin-right: 25px;
+    max-width: 100%;
+    max-height: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.shopping-card__label {
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 34px;
-    margin-bottom: 25px;
+.shopping-card__img-preview {
+    max-width: 120px;
+    min-height: 120px;
 }
 
 .shopping-card__title {
-    width: 100%;
     color: var(--singleCardText);
     font-weight: 700;
-    font-size: 40px;
-    line-height: 54px;
-    max-height: 54px;
-    margin-bottom: 25px;
+    font-size: 20px;
+    line-height: 27px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .shopping-card__select {
-    width: 197px;
-    height: 60px;
+    min-width: 197px;
+    min-height: 60px;
     border: 1px solid var(--pureBlack);
     border-radius: 10px;
     font-size: 25px;
@@ -43,16 +49,18 @@
     margin-left: 20px;
 }
 
-.shopping-card__quantity {
+.shopping-card__quantity,
+.shopping-card__label,
+.shopping-card__price-title {
     font-size: 25px;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 34px;
-    margin-top: 0;
-    margin-bottom: 25px;
+    margin: 0;
 }
 
 .shopping-card__counter {
-    width: 100%;
+    display: grid;
+    text-align: center;
 }
 
 .shopping-card__input {
@@ -66,6 +74,7 @@
 .shopping-card__controls {
     width: 74px;
     height: 36px;
+    margin: 0;
 }
 
 .shopping-card__btn-plus,
@@ -109,12 +118,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-}
-
-.shopping-card__price-title {
-    margin-top: 20px;
-    font-weight: bold;
-    font-size: 25px;
 }
 
 .shopping-card__price {
