--- a/src/Components/ShoppingCart/shoppingCart.scss
+++ b/src/Components/ShoppingCart/shoppingCart.scss
@@ -7,7 +7,9 @@
 
     @media (min-width: $largeDesktopDevice) {
         max-width: $largeDesktopDevice;
-        margin:  0 100px 0 100px;
+        margin:  30px 100px 0 100px;
+        padding-bottom: 30px;
+        border-bottom: 1px black solid;
     }
 }
 
@@ -16,13 +18,19 @@
     max-height: 100%;
     background-size: cover;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    margin: 0 30px 0 0;
 }
 
 .shopping-card__img-preview {
     max-width: 120px;
     min-height: 120px;
+    margin-top: 30px;
 }
 
 .shopping-card__title {
@@ -30,18 +38,17 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 27px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 105px;
 }
 
 .shopping-card__select {
     min-width: 197px;
-    min-height: 60px;
+    max-height: 60px;
     border: 1px solid var(--pureBlack);
     border-radius: 10px;
     font-size: 25px;
     cursor: pointer;
+    padding-left: 35px;
 }
 
 .shopping-card__option {
@@ -58,30 +65,40 @@
     margin: 0;
 }
 
-.shopping-card__counter {
-    display: grid;
+.shopping-card__price-title {
     text-align: center;
+}
+
+.shopping-card__quantity {
+    text-align: center;
+    margin-bottom: 69px;
+}
+
+.shopping-card__label {
+    margin: 0 0 60px 0;
 }
 
 .shopping-card__input {
-    max-width: 25px;
-    margin-bottom: 40px;
+    max-width: 30px;
     text-align: center;
     border: none;
     font-size: 25px;
+    margin: 0 17px 0 18px;
 }
 
 .shopping-card__controls {
-    width: 74px;
     height: 36px;
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .shopping-card__btn-plus,
 .shopping-card__btn-minus {
     border: none;
     background-color: var(--pureWhite);
-    position: relative;
     width: 15px;
     height: 34px;
 }
@@ -97,8 +114,9 @@
     position: absolute;
     background-image: url('../Product/img/minus.svg');
     background-repeat: no-repeat;
-    transform: translate(0, -10px);
+    transform: translate(-3px, -3px);
     cursor: pointer;
+    background-size: contain;
 }
 
 .shopping-card__btn-plus::after {
@@ -108,31 +126,60 @@
     position: absolute;
     background-image: url('../Product/img/plus.svg');
     background-repeat: no-repeat;
-    transform: translate(0, -15px);
+    transform: translate(-7px, -8px);
     cursor: pointer;
+    background-size: contain;
 }
 
 .shopping-card__colors {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .shopping-card__price {
-    margin-top: 20px;
-    font-weight: bold;
-    font-size: 25px;
-    padding-right: 10px;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 41px;
     color: var(--productCardPrice);
+    margin-top: 69px;
 }
 
-.shopping-list__price-calculation {
-    margin-top: 40px;
-    display: flex;
+.shopping-cart__title {
     width: 100%;
-    justify-content: center;
-    font-size: 25px;
-    color: var(--productCardDiscount);
+    text-align: center;
+    padding-bottom: 60px;
+    margin: 0;
+    line-height: 45px;
+}
+
+.shopping-card__remove-item {
+    display: block;
+    position: relative;
+    border: none;
+    background-color: var(--pureWhite);
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+}
+
+.shopping-card__remove-item:after {
+    position: absolute;
+    content: '';
+    width: 24px;
+    height: 24px;
+    background-repeat: no-repeat;
+    background-image: url('./img/crest.svg');
+    top: 110px;
+    left: 85px;
+}
+
+.shopping-cart__price-calculation {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 200px;
+    font-size: 30px;
+    font-weight: 800;
+    line-height: 41px;
 }
