added part of menu and navigation layout / ui

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   --pureWhite: #ffffff;
   --singleCardText: #29293E;
   --productCardDetails: #777888;
+  --menuBackground: #E0EBED;
 }
 
 $mobileDevice: 768px;
